# ofl-font-baker

./: .gitignore  README.ja.md  README.md  package-lock.json  package.json  tsconfig.json  vite.main.config.ts  vite.preload.config.ts  vite.renderer.config.ts
.github/: FUNDING.yml
app/main/: auto-updater.ts  export-state.ts  index.ts  ipc-handlers.ts  merge-engine.ts
app/preload/: index.ts
app/renderer/: index.css  index.html  index.tsx
app/renderer/components/: AboutModal.tsx  ExportCompleteModal.tsx  ExportFailedModal.tsx  ExportMetadataModal.tsx  ExportPanel.tsx  FontCard.tsx  FontInfoModal.tsx  GlyphPreview.tsx
app/renderer/components/ui/: badge.tsx  dialog.tsx
app/renderer/hooks/: useFontLoader.ts  useMerge.ts
app/renderer/lib/: hb-renderer.ts
app/renderer/stores/: mergeStore.ts
app/shared/: error-format.ts  postscript-name.ts  shortcuts.ts  types.ts  vendor-id.ts
docs/: ARCHITECTURE.ja.md  ARCHITECTURE.md  PYTHON_LICENSE_NOTES.ja.md
python/: LICENSE  README.ja.md  README.md  merge_fonts.py  pyproject.toml
python/tests/: conftest.py  generate_test_subsets.py  test_filter_subordinate_lookups.py  test_glyph_data.py  test_merge.py  test_metadata.py  test_pipeline.py
python/tests/fonts/Kaisei_Decol/: OFL.txt
python/tests/fonts/Playwrite_IE/: README.txt
python/tests/fonts/TikTok_Sans/: OFL.txt
scripts/: release.sh
src/main/: index.ts  ipc-handlers.ts
src/renderer/: App.tsx  global.d.ts  harfbuzzjs.d.ts  opentype.d.ts
src/renderer/components/: AboutModal.tsx  ExportMetadataModal.tsx  ExportPanel.tsx  GlyphPreview.tsx  SettingsPanel.tsx  ShortcutsModal.tsx
src/renderer/components/ui/: button.tsx
src/renderer/lib/: hb-renderer.ts  utils.ts
src/renderer/stores/: mergeStore.ts
src/shared/: constants.ts
