[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ofl-font-baker"
version = "0.1.3"
description = "Font merge engine — combine two font files into one via cmap-based glyph replacement"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Yamato Iizuka", email = "me@yamatoiizuka.com" },
]
keywords = ["font", "merge", "opentype", "cff", "truetype", "cjk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Fonts",
]
dependencies = [
    "fonttools>=4.47.0",
    "brotli>=1.1.0",
]

[project.urls]
Homepage = "https://github.com/yamatoiizuka/ofl-font-baker"
Repository = "https://github.com/yamatoiizuka/ofl-font-baker"
Issues = "https://github.com/yamatoiizuka/ofl-font-baker/issues"

[tool.hatch.build]
include = ["merge_fonts.py", "/LICENSE", "/README.md"]

[project.scripts]
ofl-font-baker = "merge_fonts:main"
